Use ArtBlock Collectibles terminology

--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@ packages/hardhat/*.txt
 **/packages/hardhat/deployments
 **/packages/react-app/src/contracts
 **/packages/hardhat/cache
+**/packages/subgraph/
 
 **/docker/**/data
 
-**/packages/subgraph/config/config.json
 
 tenderly.yaml
 
